# DulceMetal

./: .gitignore  Animacion.cpp  Animacion.hpp  Auto.cpp  Auto.hpp  Bala.cpp  Bala.hpp  BarraVida.cpp  BarraVida.hpp  CMakeLists.txt  Config.cpp  Config.hpp  Convertir.hpp  DataObstaculo.hpp  Enemigo.cpp  Enemigo.hpp  Equipamiento.cpp  Equipamiento.hpp  FisicasColisionador.cpp  FisicasColisionador.hpp  FisicasCuerpo.cpp  FisicasCuerpo.hpp  FisicasDefs.hpp  GestorFisicas.cpp  GestorFisicas.hpp  GestorIA.cpp  GestorIA.hpp  GestorSprites.cpp  GestorSprites.hpp  GestorTexturas.cpp  GestorTexturas.hpp  Inventario.cpp  Inventario.hpp  Jugador.cpp  Jugador.hpp  Mapa.cpp  Mapa.hpp  Motor.cpp  Motor.hpp  Muro.cpp  (+13 more)
raybox/: a.out  choque.cpp  impulso.cpp  raybox.cpp  raybox1.cpp  raybox2.cpp  raybox3.cpp  raybox4.cpp  raybox5  raybox5.cpp  raybox6  raybox6.cpp
raybox/raybox6/: CMakeLists.txt  Comun.hpp  FisicasCuerpo.cpp  FisicasCuerpo.hpp  Objeto.cpp  Objeto.hpp  raybox6.cpp
recursos/: auto1.xcf  bala1.xcf  texturas.xcf
recursos/armas/: aura.xcf  aura2.xcf  aura3.xcf  aura4.xcf  floreal.xcf  floreal2.xcf  floreal3.xcf  floreal4.xcf  fuego.xcf  fuego2.xcf  fuego3.xcf  fuego4.xcf  furia.xcf  furia2.xcf  furia3.xcf  furia4.xcf  marco_arma.xcf  rayo.xcf  rayo2.xcf  rayo3.xcf  rayo4.xcf  recogibles.xcf  vida.xcf  vida2.xcf  vida3.xcf  vida4.xcf
recursos/gimp/mapas/: Mapa1.xcf  Mapa2.xcf  basura1.xcf  basura2.xcf  muro.xcf
recursos/mapas/: mapa1.txt
